# ChangeLog for sys-apps/dbus
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.198 2007/05/13 07:12:30 kumba Exp $

  13 May 2007; Joshua Kinard <kumba@gentoo.org> dbus-1.0.2-r2.ebuild:
  Stable on mips, per #174807.

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  dbus-1.0.2-r2.ebuild:
  ppc stable, bug #174807

  17 Apr 2007; Jeroen Roovers <jer@gentoo.org> dbus-1.0.2-r2.ebuild:
  Stable for HPPA (bug #174807).

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> dbus-1.0.2-r2.ebuild:
  Stable on sparc wrt #174807

  16 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> dbus-1.0.2-r2.ebuild:
  Stable on Alpha, bug 174807.

  16 Apr 2007; Raúl Porcel <armin76@gentoo.org> dbus-1.0.2-r2.ebuild:
  ia64 stable wrt bug 174807

  16 Apr 2007; Doug Goldstein <cardoe@gentoo.org> dbus-1.0.2-r2.ebuild:
  Change elog as per bug #168262

  16 Apr 2007; Doug Goldstein <cardoe@gentoo.org> dbus-1.0.2-r2.ebuild:
  keepdir system.d for bug #157629

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> dbus-1.0.2-r2.ebuild:
  Stable on ppc64

  06 Apr 2007; Doug Goldstein <cardoe@gentoo.org> dbus-1.0.2-r2.ebuild:
  Fix up SELinux support

  04 Apr 2007; Doug Goldstein <cardoe@gentoo.org> files/dbus.init-1.0:
  Remove init script hack for parallel starting since HAL is now fixed.

  04 Apr 2007; Doug Goldstein <cardoe@gentoo.org> dbus-1.0.2-r2.ebuild:
  stable for amd64 and x86

*dbus-1.0.2-r2 (03 Apr 2007)

  03 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  -files/dbus-0.60-decls-ansi-c.patch,
  -files/dbus-0.60-mono-return-null-fix.diff, -files/dbus-0.60-qt-pc.patch,
  -files/dbus.init-0.61, -files/dbus-0.61-i-hate-qt-so-much.patch,
  -files/dbus-0.61-libxml-dep.patch,
  -files/dbus-0.61-mono-tools-update.diff,
  -files/dbus-0.61-qt-disabling.patch,
  -files/dbus-0.62-match-rule-security-fix.patch, metadata.xml,
  -dbus-0.61-r1.ebuild, -dbus-0.62-r2.ebuild, -dbus-1.0.2.ebuild,