@@ -3,6 +3,6 @@ AUX dbus-1.0.1-fixfilecreation.patch 474 RMD160 63e1a6737519773dc85b64098577a97b
 AUX dbus.init-1.0 1152 RMD160 f0f409b59167beef2e2b8c14f701fbeaa54c3bc9 SHA1 b00e23868046c67eaec87220e92ffcea5d9dd911 SHA256 a2e13a025faa488ff35521188c0d44909bc82c55e8676a24a5a5179545303d98
 DIST dbus-1.0.2.tar.gz 1400278 RMD160 d5eddfb058c4c026d4a9f091ad90abcc6e54861a SHA1 2870efd6ea0b5b0d14e52195f560238a74bb1e0e SHA256 8a004125f58512a69575f21f105aead0d1217fce9cb54cbafeac06b4be28c6ca
 EBUILD dbus-1.0.2-r1.ebuild 3250 RMD160 e47812bb06de3143074092a7d1b9172b55c604ce SHA1 29fffb5d33fc87c3a67e188b5f70b95a1a2553f5 SHA256 4161e2eb629e6e7ee05518afdae3b629da0e35266695c1c2ac9e846092ebc35a
-EBUILD dbus-1.0.2-r2.ebuild 3163 RMD160 2316def2032566a332ecc99da4cbc548e08f56bd SHA1 fa3266d5a3b31245c1abb6267a1c0bd5f4bb5661 SHA256 2a8c6874a09c5c41b82b92271e611d8a062598c7de821114fb8d85c94aaef834
-MISC ChangeLog 29377 RMD160 f3fc579213deda81ccaa32cc7135447d68ad5fdd SHA1 5b764fb9f4698abe597bd98194f39f017f366dbe SHA256 c044131b107698d61129fb7c168600a131558c79f4f435c94154f85659da2f19
+EBUILD dbus-1.0.2-r2.ebuild 3372 RMD160 ce1a60ed997068405405566ab564a3071b0b0034 SHA1 92bef66bb98e910305f13d64196cab92896dde59 SHA256 7a11fd839b9b61ed76a5a82d14b827a8c0c84ca58467f17f22015c7782d6d424
+MISC ChangeLog 29537 RMD160 8b62127f865bd9bb7676073f9b12a9aa8990a75b SHA1 c89e62720336575c9cfd5e89f2d6cc64cc4e67bd SHA256 3469850ebe111656c1a2f3e7180728c3ebb3ed89798d70002f02d5cec0e0e706
 MISC metadata.xml 345 RMD160 aa6e810e9546542453ebe5d6ca46804e99f447f2 SHA1 fef829210e8555807f9b69ba5afedffb8af8d02c SHA256 0c9aeabf473a6836c25a5db2ca86b880dec1efa9e52310725e08d1e0df93447d
