@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.198 2007/05/13 07:12:30 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.199 2007/06/05 14:59:09 cardoe Exp $
+
+  05 Jun 2007; Doug Goldstein <doug@gentoo.org> dbus-1.0.2-r2.ebuild:
+  generate the machine-id during pkg_postinst() for users that only use a
+  session bus
 
   13 May 2007; Joshua Kinard <kumba@gentoo.org> dbus-1.0.2-r2.ebuild:
   Stable on mips, per #174807.
